<resources>
    <string name="welcome_message">Добро пожаловать в Студенческое расписание!</string>
    <string name="choose_week">Необходимая неделя</string>
    <string name="button_numerator">Расписание по числителю</string>
    <string name="button_denominator">Расписание по знаменателю</string>
    <string name="choose_or">Или</string>
    <string name="button_notes">Добавить учебную заметку</string>
    <string name="menu_language">Выберите язык меню</string>
    <string name="menu_russian">Русский</string>
    <string name="menu_english">English</string>

</resources>