<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2380CA"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choose_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/choose_week"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_numerator"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/button_numerator"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_denominator"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginLeft="65dp"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_denominator"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/choose_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="-10dp"
        android:baselineAligned="false"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/choose_or"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_notes"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/button_notes"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>
